added email, fixed resume page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Developrer portfolio for Colin Edwin Bares"
+      content="Developer portfolio for Colin Edwin Bares"
     />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
